expert ajout list

--- a/src/app/accueil/about/about.component.html
+++ b/src/app/accueil/about/about.component.html
@@ -17,7 +17,7 @@
         </p>
       </div>
       <div>
-        <img src="assets/images/about.jpg" alt="About FLESK COVER" class="rounded-lg shadow-lg w-80 h-64 object-cover transition-transform duration-300 hover:scale-105">
+        <img src="assets/images/voiture.jpg" alt="About FLESK COVER" class="rounded-lg shadow-lg w-80 h-64 object-cover transition-transform duration-300 hover:scale-105">
       </div>
     </div>
 
