--- a/src/app/agent-service/dashbort/dashbort.component.html
+++ b/src/app/agent-service/dashbort/dashbort.component.html
@@ -1,54 +1,36 @@
-<div class="flex h-screen  font-roboto">
-
-
+<div class="flex h-screen font-roboto">
   <aside id="default-sidebar" class="fixed top-20 bg-teal-600 z-40 w-60 h-screen transition-transform -translate-x-full sm:translate-x-0" aria-label="Sidebar">
     <div class="h-full mt-4 py-4 overflow-y-auto px-10">
       <ul class="space-y-2 font-medium">
         <!-- Accueil -->
         <li>
-          <a href="#" class="flex items-center p-2 rounded-lg text-white bg-teal-700 hover:bg-teal-600 group">
+          <a [routerLink]="['/agent/interface']" class="flex items-center p-2 rounded-lg text-white hover:bg-teal-700 group">
             <i class="fas fa-home w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
             <span class="flex-1 ms-3 whitespace-nowrap">Accueil</span>
           </a>
         </li>
 
-        <!-- Mes Devis -->
+        <!-- Liste assuré automobile -->
         <li>
-          <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
-            <i class="fas fa-file-alt w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
-            <span class="flex-1 ms-3 whitespace-nowrap">Mes devis</span>
+          <a [routerLink]="['/agent/liste-auto']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-700 group">
+            <i class="fas fa-car w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+            <span class="flex-1 ms-3 whitespace-nowrap">Liste assuré automobile</span>
           </a>
         </li>
 
-        <!-- Mes Contrats -->
+        <!-- Liste assuré vie -->
         <li>
-          <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
-            <i class="fas fa-scroll w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
-            <span class="flex-1 ms-3 whitespace-nowrap">Mes Contrats</span>
+          <a [routerLink]="['/agent/liste-vie']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-700 group">
+            <i class="fas fa-heart w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+            <span class="flex-1 ms-3 whitespace-nowrap">Liste assuré vie</span>
           </a>
         </li>
 
-        <!-- Mes Constats -->
+        <!-- Liste expert -->
         <li>
-          <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
-            <i class="fas fa-file-signature w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
-            <span class="flex-1 ms-3 whitespace-nowrap">Mes Constats</span>
-          </a>
-        </li>
-
-        <!-- Paiement -->
-        <li>
-          <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
-            <i class="fas fa-credit-card w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
-            <span class="flex-1 ms-3 whitespace-nowrap">Paiement</span>
-          </a>
-        </li>
-
-        <!-- Demander Assistance -->
-        <li>
-          <a href="#" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-600 group">
-            <i class="fas fa-headset w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
-            <span class="flex-1 ms-3 whitespace-nowrap">Demander Assistance</span>
+          <a [routerLink]="['/agent/liste-expert']" class="flex items-center p-2 text-white rounded-lg hover:bg-teal-700 group">
+            <i class="fas fa-user-tie w-5 h-5 text-white transition duration-75 group-hover:text-white"></i>
+            <span class="flex-1 ms-3 whitespace-nowrap">Liste expert</span>
           </a>
         </li>
       </ul>
@@ -57,13 +39,10 @@
       <hr class="my-4 border-teal-500">
       <div class="flex flex-col items-center justify-center space-y-2">
         <p class="text-white text-sm text-center">Merci de votre visite !</p>
-        <p class="text-white text-xs text-center"> © 2025 Votre Entreprise </p>
+        <p class="text-white text-xs text-center"> © 2025 Flesk Cover </p>
       </div>
     </div>
   </aside>
-
-
-
 
   <nav class="bg-gray-50 text-gray-900 fixed top-0 left-0 w-full z-50 p-2 shadow-lg">
     <div class="container mx-auto flex justify-between items-center px-4">
@@ -86,7 +65,7 @@
         </button>
 
         <!-- Icône Notification -->
-        <button class="h-10 w-10 flex items-center justify-center rounded-full  border-2 border-teal-800 hover:bg-teal-100 focus:outline-none">
+        <button class="h-10 w-10 flex items-center justify-center rounded-full border-2 border-teal-800 hover:bg-teal-100 focus:outline-none">
           <svg class="h-5 w-5 text-teal-800" fill="currentColor" viewBox="0 0 20 20" xmlns="http://www.w3.org/2000/svg">
             <path d="M10 2a6 6 0 0 0-6 6v2c0 1.06-.57 2.02-1.5 2.58-.23.14-.5.42-.5.92v1c0 .55.45 1 1 1h15a1 1 0 0 0 1-1v-1c0-.5-.27-.78-.5-.92C16.57 12.02 16 11.06 16 10V8a6 6 0 0 0-6-6zM8 17a2 2 0 1 0 4 0H8z" />
           </svg>
@@ -95,8 +74,7 @@
         <!-- Photo de profil et informations -->
         <div class="flex items-center space-x-3 bg-gray-100 p-2 rounded-lg">
           <div class="flex flex-col">
-            <span class="text-teal-800 font-medium"> agent service</span>
-
+            <span class="text-teal-800 font-medium">agent service</span>
             <div class="flex space-x-3 text-sm text-gray-600 mt-1">
               <a [routerLink]="['/dashboard-assure/account']" class="hover:text-teal-600">Mon compte</a>
               <a href="#" class="hover:text-red-600">Déconnexion</a>
@@ -106,9 +84,4 @@
       </div>
     </div>
   </nav>
-
-
-
-    </div>
-
-  
+</div>
